# codename-mindmosaic

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  fly.toml  hello.py  pyproject.toml  requirements.txt  start.sh  study_plans.db  wait-for-it.sh
.github/ISSUE_TEMPLATE/: tasks.md
.streamlit/: config.toml
alembic/: env.py
api/: ai.py  auth.py  db.py  main.py  models.py
frontend/: app.bak  app.py  create_study_plan.py  dashboard.py  register.py
pages/: 1_Login.py  2_Register.py  3_Dashboard.py  4_Create_Study_Plan.py  5_Edit_Study_Plan.py  6_View_Study_Plan.py  app.py  create_study_plan.py  dashboard.py  edit_study_plan.py  login.py  register.py  view_study_plan.py
studyplan_ai/: study_plan.py
