[project]
name = "codename-mindmosaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "sqlmodel>=0.0.22",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]
