[project]
name = "codename-mindmosaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.6",
    "marvin>=2.3.8",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "sqlmodel>=0.0.22",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.1",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "ruff>=0.7.2",
]

[tool.ruff]
src = ["codename-mindmosaic", "tests"]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
